--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Aug 31 13:09:55 COT 2023
-sdk.dir=/Users/andresgarciamontoya/Library/Android/sdk
+#Fri Sep 01 07:23:52 COT 2023
+sdk.dir=C\:\\Users\\andre\\AppData\\Local\\Android\\Sdk
