Create log-in, registry and home page

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Sep 01 07:23:52 COT 2023
-sdk.dir=C\:\\Users\\andre\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/fabioluisbuitragoochoa/Library/Android/sdk
