--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,13 @@
         android:theme="@style/Theme.HAFFA"
         tools:targetApi="31">
         <activity
+            android:name=".main.HomePageActivity"
+            android:exported="false" />
+        <activity
             android:name=".journey.activity.ShowJourneyActivity"
             android:exported="false" />
         <activity
-            android:name=".journey.activity.ShowAllJourneysActivity"
+            android:name=".journey.ShowAllJourneysActivity"
             android:exported="false" />
         <activity
             android:name=".journey.activity.RegisterJourneyActivity"
