--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,16 @@
             android:name=".main.HomePageActivity"
             android:exported="false" />
         <activity
-            android:name=".journey.activity.ShowJourneyActivity"
+            android:name=".main.RegistryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".journey.ShowJourneyActivity"
             android:exported="false" />
         <activity
             android:name=".journey.ShowAllJourneysActivity"
             android:exported="false" />
         <activity
-            android:name=".journey.activity.RegisterJourneyActivity"
+            android:name=".journey.RegisterJourneyActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
