--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Sep 02 00:19:52 COT 2023
-
-sdk.dir=C\:\\Users\\anaor\\AppData\\Local\\Android\\Sdk
+#Sat Sep 02 01:29:59 COT 2023
+sdk.dir=C\:\\Users\\Felipe Castiblanco\\AppData\\Local\\Android\\Sdk
