--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HAFFA"
         tools:targetApi="31">
+        <activity android:name="com.example.myapplicationviews.ScorePoints"
+            android:exported="false" />
+        <activity android:name="com.example.myapplicationviews.ScoreChallenge"
+            android:exported="false"/>
         <activity
             android:name=".Profile.publishView"
             android:exported="false" />
