--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <!-- Use Notifications -->
+    <uses-permission android:name=
+        "android.permission.POST_NOTIFICATIONS"/>
+
 
     <application
         android:allowBackup="true"
